--- a/test2.html
+++ b/test2.html
@@ -61,12 +61,12 @@ $(document).ready(function () {
                               connection.write("clearInterval(1)\n", function() { });
                         } else {
                               data.splice(0,data.length);
-                              connection.write("setInterval(function(){Bluetooth.println(ecg().toFixed(3));} ,2500); \n", function() { });
+                              connection.write("setInterval(function(){Bluetooth.println(ecg().toFixed(3));} ,20); \n", function() { });
                               t = new Date();
                               start_time = t;
                               var date_win_min = t.getTime();
                               var date_win_max = date_win_min + 2*taxis_increment;
-                              if ((data.length&15)==15) g.updateOptions( { 'file': data } );                     
+                              g.updateOptions( { dateWindow : [date_win_min, date_win_max] } );                       
                               rec_flag = true;
                               rec_startstop.textContent= "Stop Recording";
                         };     
@@ -135,3 +135,4 @@ function savemyCSV() {
 </script>
 </body>
 </html>
+
