--- a/test2.html
+++ b/test2.html
@@ -66,7 +66,8 @@ $(document).ready(function () {
                               start_time = t;
                               var date_win_min = t.getTime();
                               var date_win_max = date_win_min + 2*taxis_increment;
-                              if ((data.length&15)==15) g.updateOptions( { dateWindow : [date_win_min, date_win_max] } );                       
+                              if ((data.length&15)==15)
+                                    g.updateOptions( { dateWindow : [date_win_min, date_win_max] } );                       
                               rec_flag = true;
                               rec_startstop.textContent= "Stop Recording";
                         };     
