--- a/test2.html
+++ b/test2.html
@@ -46,7 +46,7 @@ $(document).ready(function () {
                         if ( x.getTime() >= date_win_max) {
                                     date_win_min += taxis_increment;
                                      date_win_max += taxis_increment;
-                                     g.updateOptions( { dateWindow : [date_win_min, date_win_max] } );
+                                     if ((data.length&15)==15) g.updateOptions( { dateWindow : [date_win_min, date_win_max] } );
                         };
                         data.push([x, y]);
                         g.updateOptions( { 'file': data } );
@@ -66,8 +66,7 @@ $(document).ready(function () {
                               start_time = t;
                               var date_win_min = t.getTime();
                               var date_win_max = date_win_min + 2*taxis_increment;
-                              if ((data.length&15)==15)
-                                    g.updateOptions( { dateWindow : [date_win_min, date_win_max] } );                       
+                              g.updateOptions( { dateWindow : [date_win_min, date_win_max] } );                       
                               rec_flag = true;
                               rec_startstop.textContent= "Stop Recording";
                         };     
